--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.0.5
 django-bootstrap4==1.1.1
 django-pure-pagination==0.3.0
 filelock==3.0.12
+gunicorn==20.0.4
 python-coveralls==2.9.3
 pytz==2019.3
 six==1.14.0
