--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ distlib==0.3.0
 Django==3.0.5
 django-bootstrap4==1.1.1
 django-pure-pagination==0.3.0
+dj-database-url==0.5.0
 filelock==3.0.12
 gunicorn==20.0.4
 python-coveralls==2.9.3
 pytz==2019.3
+psycopg2-binary==2.8.4
 six==1.14.0
 sqlparse==0.3.1
 virtualenv==20.0.16
