--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coverage==4.5.4
 distlib==0.3.0
 Django==3.0.5
 django-bootstrap4==1.1.1
+django-filter==2.2.0
 django-pure-pagination==0.3.0
 dj-database-url==0.5.0
 filelock==3.0.12
